// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3rd Party Bridges should match snapshot when network is BNB Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-iHGNWf jDvRrm"
  >
    <p
      class="sc-jXbUNg jCIOIT sc-jsJBEP hgyjkx"
    >
      Third party bridges
    </p>
    <div
      class="sc-dtBdUo lasFkC"
    >
      <p
        class="sc-jXbUNg gzUJEq"
      >
        No bridges available
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`3rd Party Bridges should match snapshot when network is ETH Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-iHGNWf jDvRrm"
  >
    <p
      class="sc-jXbUNg jCIOIT sc-jsJBEP hgyjkx"
    >
      Third party bridges
    </p>
    <div
      class="sc-dtBdUo csjtne"
    >
      <a
        class="sc-eeDRCY dndUuq"
        data-testid="bridge-item"
        href="https://boba.banxa.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="sc-koXPp fZGqGt"
        >
          <img
            alt="Banxa logo"
            height="32px"
            src="https://raw.githubusercontent.com/bobanetwork/gateway-data/main/bridges/icons/banxa.svg"
            width="32px"
          />
        </div>
        <p
          class="sc-jXbUNg hMVWVX sc-bmzYkS jfckxU"
        >
          Banxa
        </p>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`3rd Party Bridges should match snapshot when network is TESTNET 1`] = `<DocumentFragment />`;
